[gd_scene load_steps=3 format=2]

[ext_resource path="res://AlertUI.gd" type="Script" id=1]
[ext_resource path="res://Font/Font.tres" type="Theme" id=2]

[node name="AlertUI" type="Control"]
margin_right = 320.0
margin_bottom = 240.0
script = ExtResource( 1 )

[node name="CargoWarning" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = 92.0
margin_right = 160.0
margin_bottom = 107.0
theme = ExtResource( 2 )
text = "Cargo full! Head back to town..."
align = 1

[node name="CargoTimer" type="Timer" parent="CargoWarning"]
wait_time = 3.0
one_shot = true

[node name="TooCloseToWallsWarning" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = 92.0
margin_right = 160.0
margin_bottom = 107.0
theme = ExtResource( 2 )
text = "Too close to walls!"
align = 1

[node name="TooCloseToWallsTimer" type="Timer" parent="TooCloseToWallsWarning"]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="CargoWarning/CargoTimer" to="." method="_on_CargoTimer_timeout"]
[connection signal="timeout" from="TooCloseToWallsWarning/TooCloseToWallsTimer" to="." method="_on_TooCloseToWallsTimer_timeout"]
